[gd_scene load_steps=14 format=2]

[ext_resource path="res://Source/Button/btn_big.png" type="Texture" id=1]
[ext_resource path="res://Source/Button/btn_big_dark.png" type="Texture" id=2]
[ext_resource path="res://Source/Button/btn_big_light.png" type="Texture" id=3]
[ext_resource path="res://Source/OpenSans-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Source/man.png" type="Texture" id=5]
[ext_resource path="res://Source/nice.png" type="Texture" id=6]
[ext_resource path="res://GUI/MainTraumaScene.gd" type="Script" id=7]
[ext_resource path="res://Source/Button/btn_small_dark.png" type="Texture" id=8]
[ext_resource path="res://Source/Button/btn_small.png" type="Texture" id=9]
[ext_resource path="res://Source/Button/btn_small_light.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 4 )

[node name="MainMenuTrauma" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true

[node name="FieldChoose" type="ColorRect" parent="Background"]
anchor_left = 0.761
anchor_top = 0.5
anchor_right = 0.761
anchor_bottom = 0.5
margin_left = -219.5
margin_top = -219.5
margin_right = 220.5
margin_bottom = 220.5
color = Color( 1, 0.803922, 0.713726, 1 )

[node name="BorderField" type="ReferenceRect" parent="Background/FieldChoose"]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0.847059, 0.772549, 0.576471, 1 )
border_width = 1.5
editor_only = false

[node name="ButtonListForms" type="TextureButton" parent="Background/FieldChoose"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.5
margin_top = -126.5
margin_right = 475.5
margin_bottom = 20.5
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="NameListForms" type="Label" parent="Background/FieldChoose/ButtonListForms"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.5
margin_top = -27.5
margin_right = 250.5
margin_bottom = 27.5
custom_colors/font_color = Color( 0.270588, 0.439216, 0.117647, 1 )
custom_fonts/font = SubResource( 2 )
text = "Формы для заполнения"

[node name="ButtonSaveForms" type="TextureButton" parent="Background/FieldChoose"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.5
margin_top = 52.5
margin_right = 475.5
margin_bottom = 199.5
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="NameSaveForms" type="Label" parent="Background/FieldChoose/ButtonSaveForms"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.5
margin_top = -27.5
margin_right = 227.5
margin_bottom = 27.5
custom_colors/font_color = Color( 0.270588, 0.439216, 0.117647, 1 )
custom_fonts/font = SubResource( 2 )
text = "Сохраненные формы"

[node name="Man" type="TextureRect" parent="Background"]
anchor_left = 0.001
anchor_top = 0.123
anchor_right = 0.495215
anchor_bottom = 0.966833
margin_left = -0.024
margin_top = 0.199997
margin_right = 216.9
margin_bottom = 216.9
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ShoulderRight" type="Area2D" parent="Background/Man"]
position = Vector2( 275.714, 152.857 )
scale = Vector2( 1.42857, 1.42857 )

[node name="ShoulderRightFill" type="CollisionPolygon2D" parent="Background/Man/ShoulderRight"]
visible = false
polygon = PoolVector2Array( -14, -21, -15, -4, -7, 11, 6, 32, 9, 7, 6, -8, -2, -17 )

[node name="ReferenceRect" type="ReferenceRect" parent="Background/Man/ShoulderRight"]
margin_left = -14.0
margin_top = -19.0
margin_right = 8.0
margin_bottom = 31.0
mouse_filter = 2
border_width = 1.5
editor_only = false

[node name="ShoulderRightStroke" type="Polygon2D" parent="Background/Man/ShoulderRight"]
visible = false
color = Color( 0.85098, 0.85098, 0.85098, 0.584314 )
polygon = PoolVector2Array( -13.9998, -20.9999, -14.9998, -3.99989, 5.00021, 31.0001, 8.00023, 14.0001, 10.0002, 6.00012, 7.00023, -3.99989, 2.00021, -13.9999, -7.99979, -19.9999 )

[node name="ShoulderLeft" type="Area2D" parent="Background/Man"]
position = Vector2( 112.857, 145.714 )
scale = Vector2( 1.42857, 1.42857 )

[node name="ShoulderLeftFill" type="CollisionPolygon2D" parent="Background/Man/ShoulderLeft"]
visible = false
polygon = PoolVector2Array( -6.99979, -9.99992, -11.9998, -1.99991, -12.9998, 16.0001, -12.9998, 31.0001, 7.00022, 6.00009, 7.00022, -16.9999, -0.999786, -15.9999 )

[node name="ReferenceRect" type="ReferenceRect" parent="Background/Man/ShoulderLeft"]
margin_left = -14.0
margin_top = -19.0
margin_right = 8.0
margin_bottom = 31.0
mouse_filter = 2
border_width = 1.5
editor_only = false

[node name="ShoulderLeftStroke" type="Polygon2D" parent="Background/Man/ShoulderLeft"]
visible = false
color = Color( 0.85098, 0.85098, 0.85098, 0.584314 )
polygon = PoolVector2Array( -6.99979, -9.99992, -11.9998, -1.99991, -12.9998, 31.0001, -1.99979, 18.0001, 7.00022, 5.00009, 7.00023, -3.99989, 7.00022, -16.9999, -0.999786, -15.9999 )

[node name="KneeRight" type="Area2D" parent="Background/Man"]
position = Vector2( 227.142, 498.571 )
scale = Vector2( 1.42857, 1.42857 )

[node name="KneeRightFill" type="CollisionPolygon2D" parent="Background/Man/KneeRight"]
visible = false
polygon = PoolVector2Array( -16.9997, 8.00015, -14.9997, 29.0002, -0.99971, 29.0002, 9, 7, 2.00029, -5.99985, -10.9997, -4.99985 )

[node name="ReferenceRect" type="ReferenceRect" parent="Background/Man/KneeRight"]
margin_left = -18.0
margin_top = -6.0
margin_right = 14.0
margin_bottom = 30.0
mouse_filter = 2
border_width = 1.5
editor_only = false

[node name="KneeRightStroke" type="Polygon2D" parent="Background/Man/KneeRight"]
visible = false
position = Vector2( -0.9655, 8.94237 )
scale = Vector2( 1.06896, 0.711537 )
color = Color( 0.85098, 0.85098, 0.85098, 0.584314 )
polygon = PoolVector2Array( -12.1933, -11.162, -14.9998, -1.32422, -13.1288, 28.1894, -0.0319977, 28.1894, -0.0319977, 28.1894, 9.32288, -2.72961, 3.70995, -19.5945, -9.38687, -19.5945 )

[node name="KneeLeft" type="Area2D" parent="Background/Man"]
position = Vector2( 160.203, 485.101 )
scale = Vector2( 2.04081, 2.04081 )

[node name="KneeLeftFill" type="CollisionPolygon2D" parent="Background/Man/KneeLeft"]
visible = false
polygon = PoolVector2Array( -8.49949, 14.3004, -6.39948, 29.7005, 3.40054, 29.7005, 4.80054, 14.3004, 2.70054, 8.00043, 0.600533, 3.80042, -7.79948, 3.80042 )

[node name="ReferenceRect" type="ReferenceRect" parent="Background/Man/KneeLeft"]
margin_left = -11.0
margin_top = 4.0
margin_right = 11.0
margin_bottom = 30.0
mouse_filter = 2
border_width = 1.5
editor_only = false

[node name="KneeLeftStroke" type="Polygon2D" parent="Background/Man/KneeLeft"]
visible = false
position = Vector2( -0.9655, 8.94237 )
scale = Vector2( 1.06896, 0.711537 )
color = Color( 0.85098, 0.85098, 0.85098, 0.584314 )
polygon = PoolVector2Array( -7.04794, 5.56271, -7.04794, 8.51407, -5.08342, 29.1736, 4.08437, 29.1736, 5.39405, 7.53027, 3.42952, -1.32379, 1.465, -7.22653, -6.3931, -7.22653 )

[node name="ElbowRight" type="Area2D" parent="Background/Man"]
position = Vector2( 611.632, 215.101 )
scale = Vector2( 2.04081, 2.04081 )

[node name="ElbowRightFill" type="CollisionPolygon2D" parent="Background/Man/ElbowRight"]
visible = false
polygon = PoolVector2Array( -9.19952, 19.2005, -3.59952, 27.6006, 5.50052, 27.6006, 10.4005, 19.9005, 10.4005, 12.9005, 8.30051, 5.90048, -5.69952, 5.90048 )

[node name="ReferenceRect" type="ReferenceRect" parent="Background/Man/ElbowRight"]
margin_left = -10.0
margin_top = 5.0
margin_right = 11.0
margin_bottom = 28.0
mouse_filter = 2
border_width = 1.5
editor_only = false

[node name="ElbowRightStroke" type="Polygon2D" parent="Background/Man/ElbowRight"]
visible = false
position = Vector2( -0.9655, 8.94237 )
scale = Vector2( 1.06896, 0.711537 )
color = Color( 0.85098, 0.85098, 0.85098, 0.584314 )
polygon = PoolVector2Array( -7.70285, 14.4169, -2.46411, 26.2224, 6.7037, 26.2224, 10.6328, 15.4007, 10.6328, 5.56279, 8.66824, -4.27509, -4.42865, -4.27509 )

[node name="ElbowLeft" type="Area2D" parent="Background/Man"]
position = Vector2( 431.632, 215.101 )
scale = Vector2( 2.04081, 2.04081 )

[node name="ElbowLeftFill" type="CollisionPolygon2D" parent="Background/Man/ElbowLeft"]
visible = false
polygon = PoolVector2Array( -9.19952, 19.2005, -3.59952, 27.6006, 5.50052, 27.6006, 10.4005, 19.9005, 10.4005, 12.9005, 8.30051, 5.90048, -5.69952, 5.90048 )

[node name="ReferenceRect" type="ReferenceRect" parent="Background/Man/ElbowLeft"]
margin_left = -10.0
margin_top = 5.0
margin_right = 11.0
margin_bottom = 28.0
mouse_filter = 2
border_width = 1.5
editor_only = false

[node name="ElbowLeftStroke" type="Polygon2D" parent="Background/Man/ElbowLeft"]
visible = false
position = Vector2( -0.9655, 8.94237 )
scale = Vector2( 1.06896, 0.711537 )
color = Color( 0.85098, 0.85098, 0.85098, 0.584314 )
polygon = PoolVector2Array( -7.70285, 14.4169, -2.46411, 26.2224, 6.7037, 26.2224, 10.6328, 15.4007, 10.6328, 5.56279, 8.66824, -4.27509, -4.42865, -4.27509 )

[node name="Header" type="Label" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -238.5
margin_top = 27.0
margin_right = 238.5
margin_bottom = 36.0
custom_colors/font_color = Color( 0.270588, 0.439216, 0.117647, 1 )
custom_fonts/font = SubResource( 1 )
text = "Травматологическое направление"

[node name="ButtonBack" type="TextureButton" parent="Background"]
margin_left = 40.0
margin_top = 25.0
margin_right = 240.0
margin_bottom = 105.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 10 )
expand = true

[node name="NameButton" type="Label" parent="Background/ButtonBack"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = -27.5
margin_right = 62.0
margin_bottom = 27.5
custom_colors/font_color = Color( 0.733333, 0.231373, 0.054902, 1 )
custom_fonts/font = SubResource( 3 )
text = "Назад"

[connection signal="pressed" from="Background/FieldChoose/ButtonListForms" to="." method="_on_ButtonListForms_pressed"]
[connection signal="pressed" from="Background/FieldChoose/ButtonSaveForms" to="." method="_on_ButtonSaveForms_pressed"]
[connection signal="input_event" from="Background/Man/ShoulderRight" to="." method="_on_ShoulderRight_input_event"]
[connection signal="mouse_entered" from="Background/Man/ShoulderRight" to="." method="_on_ShoulderRight_mouse_entered"]
[connection signal="mouse_exited" from="Background/Man/ShoulderRight" to="." method="_on_ShoulderRight_mouse_exited"]
[connection signal="input_event" from="Background/Man/ShoulderLeft" to="." method="_on_ShoulderLeft_input_event"]
[connection signal="mouse_entered" from="Background/Man/ShoulderLeft" to="." method="_on_ShoulderLeft_mouse_entered"]
[connection signal="mouse_exited" from="Background/Man/ShoulderLeft" to="." method="_on_ShoulderLeft_mouse_exited"]
[connection signal="input_event" from="Background/Man/KneeRight" to="." method="_on_KneeRight_input_event"]
[connection signal="mouse_entered" from="Background/Man/KneeRight" to="." method="_on_KneeRight_mouse_entered"]
[connection signal="mouse_exited" from="Background/Man/KneeRight" to="." method="_on_KneeRight_mouse_exited"]
[connection signal="input_event" from="Background/Man/KneeLeft" to="." method="_on_KneeLeft_input_event"]
[connection signal="mouse_entered" from="Background/Man/KneeLeft" to="." method="_on_KneeLeft_mouse_entered"]
[connection signal="mouse_exited" from="Background/Man/KneeLeft" to="." method="_on_KneeLeft_mouse_exited"]
[connection signal="input_event" from="Background/Man/ElbowRight" to="." method="_on_ElbowRight_input_event"]
[connection signal="mouse_entered" from="Background/Man/ElbowRight" to="." method="_on_ElbowRight_mouse_entered"]
[connection signal="mouse_exited" from="Background/Man/ElbowRight" to="." method="_on_ElbowRight_mouse_exited"]
[connection signal="input_event" from="Background/Man/ElbowLeft" to="." method="_on_ElbowLeft_input_event"]
[connection signal="mouse_entered" from="Background/Man/ElbowLeft" to="." method="_on_ElbowLeft_mouse_entered"]
[connection signal="mouse_exited" from="Background/Man/ElbowLeft" to="." method="_on_ElbowLeft_mouse_exited"]
[connection signal="pressed" from="Background/ButtonBack" to="." method="_on_TextureButton_pressed"]
